# image-webp

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.lock.msrv  Cargo.toml  Cross.toml  LOG.md  README.md  justfile
.github/workflows/: ci.yml  rust.yml
benches/: decode_benchmark.rs  encode_benchmark.rs  encode_vs_libwebp.rs  profile_encode.rs  profile_wasm.rs
dev/: decode_benchmark.rs  decode_lossless_benchmark.rs  decoder_upstream_compare.rs  lossless_benchmark.rs  test_lossless.rs  test_pred_only.rs  test_pred_sizes.rs  test_predictor.rs
examples/: api_guide.rs  hrtb_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_animated.rs  decode_still.rs
scripts/: heaptrack_batch.sh  profile_memory.sh
src/: alpha_blending.rs  bool_reader.rs  codec.rs  decoder.rs  detect.rs  encoder.rs  extended.rs  huffman.rs  lib.rs  loop_filter.rs  lossless.rs  lossless_transform.rs  metadata.rs  mod.rs  pixel.rs  transform.rs  vp8.rs  vp8_arithmetic_decoder.rs  vp8_arithmetic_encoder.rs  vp8_common.rs  vp8_encoder.rs  vp8_info.rs  vp8_prediction.rs  yuv.rs  zencodec.rs  zenode_defs.rs
src/common/: prediction.rs  simd_neon.rs  simd_sse.rs  simd_wasm.rs  transform.rs  transform_aarch64.rs  transform_simd_intrinsics.rs  transform_wasm.rs
src/decoder/: api.rs  extended.rs  limits.rs  loop_filter.rs  loop_filter_avx2.rs  loop_filter_dispatch.rs  loop_filter_neon.rs  loop_filter_wasm.rs  lossless.rs  lossless_transform.rs  mod.rs  streaming.rs  vp8.rs  yuv.rs  yuv_neon.rs  yuv_simd.rs  yuv_wasm.rs
src/encoder/: api.rs  arithmetic.rs  config.rs  mod.rs  quantize.rs  residual_cost.rs  trellis.rs
src/encoder/analysis/: classifier.rs  histogram.rs  iterator.rs  mod.rs  prediction.rs
src/encoder/cost/: distortion.rs  mod.rs
src/encoder/vp8/: mod.rs  mode_selection.rs  residuals.rs
src/encoder/vp8l/: backward_refs.rs  cost_model.rs  encode.rs  histogram.rs  huffman.rs  meta_huffman.rs  transforms.rs
src/lossless/: decoder.rs  huffman.rs  mod.rs  reverse_transform.rs
src/lossless/decoder/: huffman.rs  mod.rs  reverse_transform.rs
src/lossless/encoder/: bit_writer.rs  huffman.rs  mod.rs
src/lossy/: arithmetic_decoder.rs  arithmetic_encoder.rs  encoder.rs  mod.rs  prediction.rs  yuv.rs
src/mux/: anim.rs  anim_decode.rs  assemble.rs  demux.rs  error.rs  mod.rs
tests/: CREDITS.md  auto_detection_tuning.rs  clic_benchmark.rs  codec_benchmark.rs  decode.rs  edge_tile_ssim2_comparison.rs  heuristics.rs  i4_diagnostic_harness.rs  i4_quantization_parity.rs  large_encode_roundtrip.rs  lossless_roundtrip.rs  lossy_encoder_quality.rs  mux_tests.rs  webpx_regression.rs  yuv_benchmark.rs
