[package]
name = "image-webp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.67.1"
include = ["/src", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.47"

[dev-dependencies]
paste = "1.0.14"
png = "0.17.10"
rand = "0.8.5"
